FIX - VPN chart modal on mobile

--- a/_sass/_vpn-modal.scss
+++ b/_sass/_vpn-modal.scss
@@ -15,9 +15,9 @@
 	box-shadow: 0 10px 30px rgba(0, 0, 0, .19), 0 6px 90px rgba(0, 0, 0, .17);
 	border-radius: var(--bulma-radius-large);
 	width: calc(100vw - 20px);
-	height: calc(100vh - 75px);
+	height: calc(100svh - 75px);
 	top: 50%;
-	max-width: 600px;
+	max-width: 730px;
 	padding: 0;
 	translate: -50% -50%;
 	border: 2px solid var(--bulma-primary);
